# advent-of-code-2025

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
common/: Cargo.toml
common/src/: lib.rs
day_1/: Cargo.toml
day_1/src/: main.rs
day_10/: Cargo.toml
day_10/src/: main.rs
day_11/: Cargo.toml
day_11/src/: main.rs
day_12/: Cargo.toml
day_2/: Cargo.toml
day_2/src/: main.rs
day_3/: Cargo.toml
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/src/: input2  main.rs
day_6/: Cargo.toml
day_6/src/: main.rs
day_7/: Cargo.toml
day_7/src/: main.rs
day_8/: Cargo.toml
day_8/src/: main.rs
day_9/: Cargo.toml
day_9/src/: main.rs
